# ultra-ecp

./: .env  .gitignore  COMPACTION.md  GAP_ANALYSIS.md  ICLOUD_KEYCHAIN.md  MAC_APP_REQUIREMENTS.md  REMOTE_CONNECTION.md  RUST_MIGRATION.md  SECURE_CONNECTION.md  SINGLE_ECP_GUIDE.md  STATS_VIEW.md  package.json  tsconfig.docs.json  tsconfig.json
.ultra/: chat.db
ai-bridge/: index.ts  package.json
config/themes/: catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json
docs/: feature-research.md  index.html
docs/plans/: agent-sdk-session-resume.md
rust/: Cargo.toml
rust/crates/ecp-ai-bridge/: Cargo.toml
rust/crates/ecp-ai-bridge/src/: lib.rs
rust/crates/ecp-protocol/: Cargo.toml
rust/crates/ecp-protocol/src/: auth.rs  context.rs  error.rs  jsonrpc.rs  lib.rs  methods.rs  notifications.rs
rust/crates/ecp-protocol/tests/: protocol_tests.rs
rust/crates/ecp-server/: Cargo.toml
rust/crates/ecp-server/src/: lib.rs  middleware.rs  registry.rs  router.rs  workspace.rs
rust/crates/ecp-services/: Cargo.toml
rust/crates/ecp-services/src/: bridge_services.rs  chat.rs  database.rs  document.rs  file.rs  git.rs  lib.rs  lsp.rs  models.rs  secret.rs  session.rs  terminal.rs  watch.rs
rust/crates/ecp-transport/: Cargo.toml
rust/crates/ecp-transport/src/: client.rs  lib.rs  server.rs
rust/src/: main.rs
rust/tests/: integration_tests.rs  service_tests.rs
src/: constants.ts  debug.ts  main.ts
src/agents/: index.ts
src/agents/capabilities/: index.ts
src/agents/communication/: index.ts
src/agents/llm/: ai-service-executor.ts  index.ts
src/agents/roles/: base.ts  creative.ts  decision.ts  evaluative.ts  index.ts  observational.ts  orchestrator.ts
src/agents/state/: index.ts
src/config/: defaults.ts  settings-loader.ts  settings.ts
src/core/: auto-indent.ts  auto-pair.ts  bracket-match.ts  buffer.ts  cache.ts  char-width.ts  colors.ts  cursor.ts  document.ts  errors.ts  event-emitter.ts  fold.ts  result.ts  undo.ts
src/protocol/: auth.ts  index.ts  methods.ts  notifications.ts  schemas.ts  types.ts
src/server/: ecp-server.ts  index.ts  websocket-server.ts
src/server/auth/: handshake.ts  index.ts  types.ts
src/server/middleware/: caller-telemetry-middleware.ts  index.ts  settings-snapshot-middleware.ts  types.ts  validation-middleware.ts  working-set-middleware.ts
src/services/agents/: adapter.ts  database-store.ts  index.ts  interface.ts  local.ts  storage.ts  types.ts
src/services/ai/: adapter.ts  agent-session-registry.ts  compaction.test.ts  compaction.ts  context-window.test.ts  context-window.ts  index.ts  interface.ts  local.ts  model-registry.ts  permissions.ts  system-prompt.ts  types.ts
src/services/auth/: adapter.ts
src/services/chat/: adapter.ts  database.ts  index.ts  storage.ts  transactions.ts  workflow-adapter.ts
src/services/database/: adapter.ts  errors.ts  history.ts  index.ts  interface.ts  local.ts  sql-completion.ts  sql-utils.ts  types.ts
src/services/document/: adapter.ts  index.ts  interface.ts  local.ts  types.ts
src/services/ensemble/: agent-instance.ts  framework-loader.ts  index.ts  orchestrator.ts  shared-feed.ts  types.ts
src/services/file/: adapter.ts  errors.ts  index.ts  interface.ts  local.ts  service.ts  types.ts
src/services/git/: adapter.ts  cli.ts  errors.ts  index.ts  interface.ts  types.ts
src/services/lsp/: adapter.ts  client.ts  errors.ts  index.ts  interface.ts  service.ts  types.ts
src/services/models/: index.ts  registry.ts  types.ts
src/services/oauth/: claude-oauth.ts  index.ts  pkce.ts
src/services/search/: index.ts  interface.ts  local.ts  types.ts
src/services/secret/: adapter.ts  errors.ts  index.ts  interface.ts  local.ts  types.ts
src/services/session/: adapter.ts  errors.ts  index.ts  interface.ts  local.ts  schema.ts  session-schema.ts  types.ts
src/services/syntax/: adapter.ts  errors.ts  highlighter.ts  index.ts  interface.ts  service.ts  types.ts
src/services/terminal/: adapter.ts  errors.ts  index.ts  interface.ts  service.ts  types.ts
src/services/validation/: ai-critic.ts  cache.ts  config-loader.ts  context-parser.ts  context-resolver.ts  context-watcher.ts  errors.ts  human-interaction.ts  index.ts  pipeline.ts  static-validator.ts  types.ts
src/shared/: index.ts
src/shared/types/: activity.ts  agents.ts  documents.ts  ecp.ts  index.ts  messages.ts  permissions.ts
src/terminal/: ansi.ts  index.ts  input.ts  pty-backend.ts  pty-bridge.ts  pty-externals.d.ts  pty-factory.ts  pty-loader.ts  pty.ts  screen-buffer.ts
src/terminal/backends/: bun-pty.ts  ipc-pty.ts  node-pty.ts
src/workflows/: index.ts
src/workflows/nodes/: conversion.ts  executor.ts  index.ts  transform.ts  types.ts
src/workflows/templates/: cca.ts  index.ts
tests/helpers/: chat-harness.ts  ecp-client.ts  fixtures.ts  index.ts  mock-ai-provider.ts  temp-workspace.ts
tests/protocol/: auth.test.ts  methods.test.ts  notifications.test.ts  types.test.ts
tests/server/: caller-assertion.test.ts  ecp-server.test.ts
tests/server/auth/: handshake.test.ts
tests/server/middleware/: types.test.ts  validation-middleware.test.ts  working-set-middleware.test.ts
tests/services/ai/: agent-session-registry.test.ts  permissions.test.ts  pipeline.test.ts  system-prompt.test.ts  terminal-always-requires-approval.test.ts  tool-definitions.test.ts  tool-translator.test.ts  types.test.ts
tests/services/chat/: review-panel.test.ts  services.test.ts  smoke.test.ts  stores.test.ts  test-utils.ts  transactions.test.ts  workflow-executor.test.ts
tests/services/database/: local-database-service.test.ts  query-history.test.ts  sql-utils.test.ts
tests/services/document/: local-service.test.ts
tests/services/ensemble/: framework-loader.test.ts  orchestrator.test.ts  shared-feed.test.ts
tests/services/file/: adapter-security.test.ts  file-service.test.ts  local-provider.test.ts
tests/services/git/: git-cli-service.test.ts
tests/services/lsp/: local-lsp-service.test.ts
tests/services/search/: local.test.ts  types.test.ts
(+126 files in other folders)
