[package]
name = "ultra-ecp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ultra-ecp"
path = "src/main.rs"

[dependencies]
ecp-protocol = { workspace = true }
ecp-transport = { workspace = true }
ecp-server = { workspace = true }
ecp-services = { workspace = true }
ecp-ai-bridge = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
hex = "0.4"

[workspace]
resolver = "2"
members = [
    ".",
    "crates/ecp-protocol",
    "crates/ecp-transport",
    "crates/ecp-server",
    "crates/ecp-services",
    "crates/ecp-ai-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ultra"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# HTTP
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
hyper = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
bytes = "1"

# Process / PTY
portable-pty = "0.8"

# File watching
notify = "7"

# Secrets
secrecy = { version = "0.10", features = ["serde"] }

# Internal crates
ecp-protocol = { path = "crates/ecp-protocol" }
ecp-transport = { path = "crates/ecp-transport" }
ecp-server = { path = "crates/ecp-server" }
ecp-services = { path = "crates/ecp-services" }
ecp-ai-bridge = { path = "crates/ecp-ai-bridge" }

[profile.release]
lto = true
codegen-units = 1
strip = true
